Fixed blur when double picked and shift picked mark on hover

--- a/styles/master.css
+++ b/styles/master.css
@@ -765,7 +765,7 @@ div.pick_pool ul.each_pool_block > li.character[data-pick-side="red"]:hover::aft
 div.pick_pool ul.each_pool_block > li.character[data-pick-side="blue"]::after { color: rgba(var(--color-text-for-blue) / 0.8); }
 div.pick_pool ul.each_pool_block > li.character[data-pick-side="blue"]:hover::after { color: rgba(var(--color-text-for-blue) / 0.2); }
 body[data-double-pick="0"] div.pick_pool ul.each_pool_block > li.character:not([data-picked=""])::after { filter: blur(0); opacity: 1; }
-body[data-double-pick="1"] div.pick_pool ul.each_pool_block > li.character:not([data-picked-red="1"]):not([data-picked-blue="1"])::after { filter: blur(0); opacity: 1; }
+body[data-double-pick="1"] div.pick_pool ul.each_pool_block > li.character[data-picked-red="1"][data-picked-blue="1"]::after { filter: blur(0); opacity: 1; }
 div.pick_pool ul.each_pool_block > li.character[data-pick-type="entry"]::after { background-color: #BBB9; text-shadow: 0px 0px 4px #666F; }
 div.pick_pool ul.each_pool_block > li.character[data-pick-type="entry"]:hover::after { background-color: #BBB3; text-shadow: 0px 0px 8px #6666; }
 div.pick_pool ul.each_pool_block > li.character[data-pick-type="ban"]::after { background-color: #4449; text-shadow: 0px 0px 4px #AAAF; }
@@ -778,7 +778,7 @@ div.pick_pool ul.each_pool_block > li.character[data-picked="1"] div.character_h
 body[data-double-pick="0"] div.pick_pool ul.each_pool_block > li.character[data-picked="2"] div.character_holder img.character_icon { filter: blur(1px); animation: none; }
 body[data-double-pick="1"] div.pick_pool ul.each_pool_block > li.character[data-picked="2"][data-picked-red="1"][data-picked-blue="1"] div.character_holder img.character_icon { filter: blur(1px); animation: none; }
 div.pick_pool ul.each_pool_block > li.character:hover > div.character_holder { transform: scale(1.2) translateY(5%); }
-div.pick_pool ul.each_pool_block > li.character:hover > div.character_holder img.character_icon { filter: blur(0); }
+div.pick_pool ul.each_pool_block > li.character:hover > div.character_holder img.character_icon { filter: blur(0) !important; }
 /* div.pick_pool ul.each_pool_block > li.character[data-picked=""]:hover > div.character_holder img.character_icon { transform: scale(1.3) translateY(12%); } */
 div.pick_pool ul.each_pool_block > li.character[data-picked=""]:hover > div.character_holder img.character_icon { transform: scale(1) translateY(0%); transition-duration: 0.5s; transition-timing-function: ease; }
 div.pick_pool ul.each_pool_block > li.character:active > div.character_holder img.character_icon { cursor: grabbing; }
@@ -797,6 +797,8 @@ div.pick_pool ul.each_pool_block > li.character span.pick_card.red { left: 0; pa
 div.pick_pool ul.each_pool_block > li.character span.pick_card.blue { right: 0; padding: 4px 2px 5px 1.5px; color: rgba(var(--color-side-blue-bright) / 92.5%); background-color: rgba(var(--color-side-blue) / 50%); box-shadow: -1px -1px 2px 0 rgba(var(--main-color) / 65%);}
 div.pick_pool ul.each_pool_block > li.character[data-picked="2"][data-picked-red="1"] span.pick_card.red { opacity: 1; }
 div.pick_pool ul.each_pool_block > li.character[data-picked="2"][data-picked-blue="1"] span.pick_card.blue { opacity: 1; }
+div.pick_pool ul.each_pool_block > li.character:hover span.pick_card.red { transform: translate(-8px, 10px); }
+div.pick_pool ul.each_pool_block > li.character:hover span.pick_card.blue { transform: translate(8px, 10px); }
 div.pick_pool ul.each_pool_block > li.character span.name_tag { bottom: -8px; left: 0; right: 0; color: rgba(var(--bgcolor-base) / 100%); background-color: rgba(var(--main-color) / 50%); font-family: 'Noto Sans KR'; font-size: 12px; line-height: 10px; text-shadow: 0 0 2px rgb(var(--main-color)); word-break: keep-all; box-shadow: 0 0 4px 0 rgba(var(--main-color) / 50%); opacity: 0; transition-duration: 0.3s; transition-timing-function: ease-out; }
 body[data-ctrl="1"] div.pick_pool ul.each_pool_block > li.character span.name_tag { opacity: 1; }
 
